app/assets/stylesheets/components/_card_planner.scss
.card-planner {
  border: none;
  width: 100%;
  .card-title h5 {
    color: #444;
    margin-bottom: 0;
    }
  .planner-recipe-img {
    padding: 0;
  }
  .planner-recipe-img img {
    width: 100%;
    padding-right: 1px;
  }
  .btn-add-previous-planner {
    color: $green;
  }
  .btn-add-previous-planner-orange {
    color: orange;
  }
}

